fault-injection.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - svc
  http:
    - fault:
        # delay:
        #   fixedDelay: 10s
        #   percentage:
        #     value: 50
        abort:
          httpStatus: 500
          percentage:
            value: 100
      route:
      - destination:
          host: svc
          subset: all

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: svc
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: 'x-user'
  subsets:
    - name: all
      labels:
        app: nginx
