gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    # Define destinos a partir dos prefixos de url
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: svc
          subset: v1

    - match:
      - uri:
          prefix: "/b"
      route:
      - destination:
          host: svc
          subset: v1
    # Define destinos a partir de quantidade de trafego de requests
    # - route:
    #   - destination:
    #       host: svc
    #       subset: v1
    #     weight: 50
    #   - destination:
    #       host: svc
    #       subset: v2
    #     weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: svc
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
