vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - svc
  http:
    - route:
      - destination:
          host: svc
          subset: v1
        weight: 90
      - destination:
          host: svc
          subset: v2
        weight: 10
